@@ -6,21 +6,19 @@ Priority: optional
 Build-Depends:
  bison,
  cmake (>= 2.8),
-#wily# cmake (<< 3.3.2),
-#sid stretch jessie wheezy trusty wily xenial# debhelper (>= 9),
-#sid stretch jessie trusty wily xenial# dh-python,
+#sid stretch jessie trusty xenial# debhelper (>= 9),
+#sid stretch jessie trusty xenial# dh-python,
 #precise# debhelper (>= 7),
  flex,
  grass-dev,
  libexpat1-dev,
  libfcgi-dev,
-#sid stretch jessie trusty wily xenial# libgdal-dev (>= 1.10.1-0~),
+#sid stretch jessie trusty xenial# libgdal-dev (>= 1.10.1-0~),
 #precise# libgdal-dev (>= 1.9.0) | libgdal1-dev (<< 1.9.0),
-#wheezy# libgdal1-dev,
  gdal-bin,
  python-gdal,
  libgeos-dev (>= 3.0.0),
-#jessie wheezy precise trusty wily# libgsl0-dev,
+#jessie precise trusty# libgsl0-dev,
 #sid stretch xenial# libgsl-dev,
  libpq-dev,
  libproj-dev,
@@ -28,10 +26,10 @@ Build-Depends:
  libqt4-opengl-dev,
  libqca2-dev,
  libqca2-plugin-ossl,
-#wheezy jessie precise trusty utopic vivid wily xenial# libqtwebkit-dev,
-#stretch jessie wheezy# libqwt-dev,
-#precise trusty wily xenial sid# libqwt5-qt4-dev,
-#sid stretch jessie wheezy trusty wily xenial# libqjson-dev,
+#jessie precise trusty utopic xenial# libqtwebkit-dev,
+#stretch jessie# libqwt-dev,
+#precise trusty xenial sid# libqwt5-qt4-dev,
+#sid stretch jessie trusty xenial# libqjson-dev,
  libspatialite-dev,
  libsqlite3-dev,
  libspatialindex-dev,
@@ -42,14 +40,13 @@ Build-Depends:
  python-qt4-dev,
  python-qt4-sql,
  python-yaml, python-mock,
-#stretch sid wily xenial# python-future,
-#precise wheezy# python,
+#stretch sid xenial# python-future,
+#precise# python,
 #precise# python-central (>= 0.5),
-#wheezy# python-dev,
-#sid stretch jessie trusty wily xenial# python-all (>= 2.6.6-3~), python-all-dev (>= 2.6.6-3~),
-#sid stretch jessie wily xenial# pyqt4.qsci-dev,
-#sid stretch jessie trusty wily xenial# python-pyspatialite,
-#sid wheezy jessie stretch trusty wily xenial# python-nose2,
+#sid stretch jessie trusty xenial# python-all (>= 2.6.6-3~), python-all-dev (>= 2.6.6-3~),
+#sid stretch jessie xenial# pyqt4.qsci-dev,
+#sid stretch jessie trusty xenial# python-pyspatialite,
+#sid jessie stretch trusty xenial# python-nose2,
  python-sip (>= 4.5.0),
  python-sip-dev (>= 4.5.0),
  libosgearth-dev,
@@ -67,11 +64,10 @@ Build-Depends:
  libqt4-sql-sqlite, python-psycopg2
 Build-Conflicts: libqgis-dev, qgis-dev
 #sid stretch xenial#Standards-Version: 3.9.7
-#jessie wily#Standards-Version: 3.9.6
-#wheezy#Standards-Version: 3.9.3
+#jessie#Standards-Version: 3.9.6
 #precise trusty#Standards-Version: 3.8.4
 #sid stretch jessie#X-Python-Version: >= 2.7, << 2.8
-#wheezy precise trusty wily xenial#XS-Python-Version: current
+#precise trusty xenial#XS-Python-Version: current
 Vcs-Browser: https://github.com/qgis/QGIS/
 Vcs-Git: https://github.com/qgis/QGIS.git
 Homepage: http://qgis.org/
@@ -244,11 +240,10 @@ Section: libdevel
 Depends:
  grass-dev,
  libexpat1-dev,
-#sid stretch jessie trusty wily xenial# libgdal-dev (>= 1.10.1-0~),
+#sid stretch jessie trusty xenial# libgdal-dev (>= 1.10.1-0~),
 #precise# libgdal-dev (>= 1.9.0) | libgdal1-dev (<< 1.9.0),
-#wheezy# libgdal1-dev,
  libgeos-dev (>= 3.0.0),
-#jessie wheezy precise trusty wily# libgsl0-dev,
+#jessie precise trusty# libgsl0-dev,
 #sid stretch xenial# libgsl-dev,
  libpq-dev,
  libproj-dev,
@@ -383,11 +378,12 @@ Depends:
  python-markupsafe,
  python-pygments,
  python-dateutil,
+ python-requests,
  python-tz,
  python-six,
  python-yaml,
-#stretch sid wily xenial# python-future,
-#sid stretch jessie trusty wily xenial# python-pyspatialite,
+#stretch sid xenial# python-future,
+#sid stretch jessie trusty xenial# python-pyspatialite,
  libqgispython{QGIS_ABI},
  ${shlibs:Depends},
  ${python:Depends},
@@ -395,7 +391,7 @@ Depends:
  ${sip:Depends}
 Provides: ${python:Provides}
 Recommends: liblwgeom-dev
-#wheezy precise#XB-Python-Version: ${python:Versions}
+#precise#XB-Python-Version: ${python:Versions}
 Description: Python bindings to QGIS
  QGIS is a Geographic Information System (GIS) which manages, analyzes and
  display databases of geographic information.
