@@ -1,2 +1,4 @@
 libqgis-core{QGIS_ABI}: shlib-calls-exit usr/lib/libqgis_core.so.{QGIS_ABI}
 libqgis-core{QGIS_ABI}: no-symbols-control-file usr/lib/libqgis_core.so.{QGIS_ABI}
+libqgis-core{QGIS_ABI}: spelling-error-in-binary usr/lib/libqgis_core.so.{QGIS_ABI} naM name
+libqgis-core{QGIS_ABI}: spelling-error-in-binary usr/lib/libqgis_core.so.{QGIS_ABI} orderD ordered
