@@ -1,0 +1,2 @@
+qgis-providers: spelling-error-in-binary usr/lib/qgis/plugins/libdelimitedtextprovider.so AddD Add
+qgis-providers: spelling-error-in-binary usr/lib/qgis/plugins/libpostgresprovider.so theRes there's
