@@ -1,8 +1,11 @@
 qgis (2.17.0) UNRELEASED; urgency=medium
 
   * New development version 2.17 after branch of 2.16
+  * drop support for debian wheezy and ubuntu wily
+  * add python-requests dependency for metasearch plugin
+  * lintian fixes
 
- -- Jürgen E. Fischer <jef@norbit.de>  Fri, 08 Jul 2016 14:12:35 +0200
+ -- Jürgen E. Fischer <jef@norbit.de>  Mon, 01 Aug 2016 10:06:23 +0200
 
 qgis (2.16.0) unstable; urgency=medium
 
